Updated readme, usage info, logging, csv escaping tests.

--- a/src/test/resources/test_examples.yml
+++ b/src/test/resources/test_examples.yml
@@ -22,3 +22,10 @@ examples:
       "user","0.0.0.0","2015-11-30 23:15:41"
     output: |
       "0.0.0.0","2015-11-30 23:11:40","2015-11-30 23:12:41","user:2015-11-30 23:11:40,user:2015-11-30 23:11:41,user:2015-11-30 23:12:41"
+
+# Testing CSV escaping and UTF-8
+  - input: |
+      "nobody:2015-02-31 55:55:55,user","0.0.0.0","2015-11-30 23:11:40"
+      "пользователь"",""","0.0.0.0","2015-11-30 23:11:41"
+    output: |
+      "0.0.0.0","2015-11-30 23:11:40","2015-11-30 23:11:41","nobody:2015-02-31 55:55:55,user:2015-11-30 23:11:40,пользователь"","":2015-11-30 23:11:41"
